:lipstick: Correct alignwide width to navigation width

--- a/style.css
+++ b/style.css
@@ -470,7 +470,7 @@ figure {
 
 .alignwide {
 	width: 100vw;
-	max-width: 1200px;
+	max-width: 1140px;
 }
 
 #footer-widgets {
